recursion.cons.length.Length.scala.error
Compilation error:
Length:3: error: not found: value nil
  if (l==nil) {
         ^Length:4: error: type mismatch;
 found   : Unit
 required: Int
    return
    ^